--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,11 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_zoom_drawer: ^3.2.0
   gap: ^3.0.1
-  go_router: ^13.2.0
+  go_router: ^13.2.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   june: ^0.8.8
-  june_flow_util:
+  june_flow_util: ^0.8.19
   keyboard_attachable: ^2.2.0
   modal_bottom_sheet: ^3.0.0
   styled_widget: ^0.4.1
@@ -34,9 +34,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   hive_module: ^1.0.0+3
-  june_view: ^1.4.2
-  june_view_more: ^0.2.4
+  june_view: ^1.4.4 #@add
+  june_view_more: ^0.2.7 #@add
   screenutil_module: ^1.0.0+1
+
 
 flutter:
   uses-material-design: true
